// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Localized
  attrs={
    Object {
      "aria-label": true,
    }
  }
  id="moderate-comment-approveButton"
>
  <ForwardRef(forwardRef)
    aria-label="Approve"
    className="ApproveButton-root"
  >
    <ForwardRef(forwardRef)
      className="ApproveButton-icon"
      size="lg"
    >
      done
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</Localized>
`;

exports[`renders correctly inverted 1`] = `
<Localized
  attrs={
    Object {
      "aria-label": true,
    }
  }
  id="moderate-comment-approveButton"
>
  <ForwardRef(forwardRef)
    aria-label="Approve"
    className="ApproveButton-root ApproveButton-invert"
  >
    <ForwardRef(forwardRef)
      className="ApproveButton-icon"
      size="lg"
    >
      done
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</Localized>
`;
